cainsipdir=$(includedir)/cain-sip

cainsip_HEADERS=\
				uri.h \
				list.h \
				headers.h \
				parameters.h \
				mainloop.h \
				transaction.h \
				message.h \
				listeningpoint.h \
				sipstack.h \
				provider.h \
				listener.h \
				dialog.h \
				utils.h \
				cain-sdp.h \
				cain-sip.h

EXTRA_DIST=$(cainsip_HEADERS)
